Add precomputed model and related instructions in the notebook

--- a/notebook/TrAnET.ipynb
+++ b/notebook/TrAnET.ipynb
@@ -1,6 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TrAnET Pipeline\n",
+    "\n",
+    "This notebook contains the steps to run the demo of the `TrAnET` system, in particular: \n",
+    "\n",
+    "1) Dataset cleaning and topic model computation \n",
+    "2) Topics assignment\n",
+    "3) Topic diffusion analysis\n",
+    "\n",
+    "### Precomputed model and assignments\n",
+    "A precomputed model, used during experiments, is available within the folder `demo_files`. Unzip the content of the archive and copy the files in the input/output folder specified within the `config.py` configuration file. \n",
+    "\n",
+    "The precomputed model refers to the following parameters: \n",
+    "\n",
+    "    training_starting_year      = 2000\n",
+    "    training_ending_year        = 2014\n",
+    "    number_of_topics_to_extract = 50\n",
+    "    training_venues             = sv.considered_venues\n",
+    "    \n",
+    "    use_lemmer                  = True\n",
+    "    min_doc_frequency           = 2\n",
+    "    max_doc_frequency           = 0.8\n",
+    "\n",
+    "    analysis_starting_year      = 2000\n",
+    "    analysis_ending_year        = 2014\n",
+    "    analysis_venues             = sv.considered_venues\n",
+    "    \n",
+    "   "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -81,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "topic_modeling.compute_topic_model(training_starting_year, training_ending_year, training_venues, number_of_topics_to_extract, use_lemmer, min_doc_frequency, max_doc_frequency)"
